--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 <section id="eye-catch">
     <div>
-        <div>
+        <div class="hero-text">
             <h1>Linux on Apple Silicon</h1>
             <p>Asahi Linux aims to bring you a polished Linux experience on Apple Silicon Macs.</p>
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
@@ -41,9 +41,11 @@
         <h1>Contribute</h1>
     </div>
     <div class="contribute-card center-card">
-        <i class="big-icon fab fa-github"></i>
-        <p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
-        <a href="/contribute" class="more">How to contribute<i class="fas fa-angle-right more"></i></a>
+          <div class="contribute-layout">
+              <i class="big-icon fab fa-github"></i>
+              <p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
+              <a href="/contribute" class="more">How to contribute<i class="fas fa-angle-right more"></i></a>
+        </div>
     </div>
 </section>
 <section id="documentation">
@@ -51,9 +53,11 @@
         <h1>Documentation</h1>
     </div>
     <div class="documentation-card center-card">
-        <i class="big-icon fas fa-book-open"></i>
-        <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
-        <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+        <div class="documentation-layout">
+          <i class="big-icon fas fa-book-open"></i>
+          <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
+          <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+        </div>
     </div>
 </section>
 {{ partial "footer.html" . }}
