--- a/static/css/main.css
+++ b/static/css/main.css
@@ -606,13 +606,14 @@ header {
     animation-name: fadein;
     animation-duration: 2.5s;
 }
+
 @keyframes fadein {
-from {
-    opacity: 0;
-}
-to {
-    opacity: 1;
-}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 #eye-catch > div > div:nth-of-type(2) {
@@ -623,6 +624,10 @@ to {
 #eye-catch > div > div > img {
     position: relative;
     width: 100%;
+}
+
+.hero-text * {
+    padding: 5px;
 }
 
 .main-card > h2 {
@@ -647,7 +652,7 @@ to {
     left: 10px;
 }
 
-#eye-catch > div > div > .more, #eye-catch > div > div > a > .more {
+#eye-catch .more {
     color: #A61200;
 }
 
@@ -737,21 +742,80 @@ div.chat-button > * {
 
 /* Contribute */
 body.landing #contribute {
-    background-color: #FFF;
+    background-color: #e8e8e8;
+}
+
+div.contribute-layout {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 40px 0px;
+    width: 90%;
+    max-width: 62em;
+}
+
+div.contribute-layout i {
+    padding-right: 30px;
+    color: #fff;
+}
+
+div.contribute-layout > a {
+    flex: 1 20em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+div.contribute-layout > p {
+    flex: 1 20em;
+    display: flex;
+    max-width: 35rem;
+    width: 100%;
+    padding: 40px 0 40px 40px;
+    border-left: solid 1px #FFF;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .contribute-card {
     background-color: #848484;
 }
 
-.contribute-card > * {
-    color: #FFF;
-}
-
 /* Documentation */
 
 body.landing #documentation {
-    background-color: #D7EAFF;
+    background-color: #9cbbde;
+}
+
+div.documentation-layout {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 40px 0px;
+    width: 90%;
+    max-width: 62em;
+}
+
+div.documentation-layout i {
+    padding-right: 30px;
+    color: #fff;
+}
+
+div.documentation-layout > a {
+    flex: 1 20em;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+}
+
+div.documentation-layout > p {
+    flex: 1 20em;
+    display: flex;
+    max-width: 35rem;
+    width: 100%;
+    padding: 40px 0 40px 40px;
+    border-left: solid 1px #FFF;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .documentation-card {
@@ -922,7 +986,7 @@ ul.footer-services > li > a > i {
 }
 
 @media screen and (max-width: 1050px) {
-	.community-links > div {
+    .community-links > div {
         display: block;
     }
     
@@ -943,7 +1007,7 @@ ul.footer-services > li > a > i {
         flex-wrap: wrap;
     }
     
-	.menu-container > li {
+    .menu-container > li {
         margin: 0px 15px;
         line-height: 2em;
     }
