style(index): fix media query + cleanup css
Signed-off-by: ndom91 <yo@ndo.dev>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,11 +40,15 @@
     <div class="center-title">
         <h1>Contribute</h1>
     </div>
-    <div class="contribute-card center-card">
-          <div class="contribute-layout">
-              <i class="big-icon fab fa-github"></i>
-              <p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
-              <a href="/contribute" class="more">How to contribute<i class="fas fa-angle-right more"></i></a>
+    <div class="contribute-card">
+          <div class="section-wrapper">
+              <div class="section-body">
+                  <i class="big-icon fab fa-github"></i>
+                  <p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
+              </div>
+              <div class="section-link">
+                  <a href="/contribute" class="more">How to contribute<i class="fas fa-angle-right more"></i></a>
+              </div>
         </div>
     </div>
 </section>
@@ -52,11 +56,15 @@
     <div class="center-title">
         <h1>Documentation</h1>
     </div>
-    <div class="documentation-card center-card">
-        <div class="documentation-layout">
-          <i class="big-icon fas fa-book-open"></i>
-          <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
-          <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+    <div class="documentation-card">
+        <div class="section-wrapper">
+              <div class="section-body">
+                  <i class="big-icon fas fa-book-open"></i>
+                  <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
+              </div>
+              <div class="section-link">
+                  <a href="https://github.com/AsahiLinux/docs/wiki" class="more">Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+              </div>
         </div>
     </div>
 </section>
