--- a/css/main.css
+++ b/css/main.css
@@ -512,11 +512,7 @@ b, strong {
     font-weight: 700;
 }
 
-* {
-    color: #2C2C2C;
-}
-
-.white-text * *{
+.white-text {
     color: white;
 }
 
@@ -533,15 +529,16 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    color: #2C2C2C;
 }
 
-body.landing > * h1 {
+body.landing h1 {
     font-size: 200%;
     margin-bottom: 5px;
     font-weight: 700;
 }
 
-body.landing > * h2 {
+body.landing h2 {
     font-family: 'Noto Serif JP', serif;
     font-size: 125%;
     margin-bottom: 4px;
@@ -555,7 +552,7 @@ body.landing section p {
     text-align: center;
 }
 
-.header-logo > a > img.logo {
+.header-logo img.logo {
     height: 130px;
     display: inline-block;
     margin: 11px auto 0px auto;
@@ -574,7 +571,7 @@ div.header-menu {
     border-top: solid 1px #2C2C2C;
 }
 
-.menu-container > li {
+.menu-container li {
     font-family: 'Montserrat', sans-serif;
     margin: 0px 20px;
 }
@@ -625,15 +622,6 @@ to {
     width: 100%;
 }
 
-.main-card > h2 {
-    width: 100%;
-}
-
-.main-card > a {
-    display: block;
-    text-align: right;
-}
-
 .more {
     font-size: 135%;
     position: relative;
@@ -647,7 +635,7 @@ to {
     left: 10px;
 }
 
-#eye-catch > div > div > .more, #eye-catch > div > div > a > .more {
+#eye-catch .more {
     color: #A61200;
 }
 
@@ -663,7 +651,7 @@ div.center-title {
     margin: 50px auto;
 }
 
-div.center-title > h1, div.center-title > h2 {
+div.center-title h1, div.center-title h2 {
     text-align: center;
 }
 
@@ -671,7 +659,7 @@ div.center-title > h1, div.center-title > h2 {
     background-color: #7A162E;
 }
 
-.community-links > div {
+.community-links div {
     display: flex;
     align-content: center;
     margin: 0px auto;
@@ -686,18 +674,18 @@ div.community-card {
     padding: 40px 0px;
 }
 
-div.community-card > i {
+div.community-card i {
     flex: 1;
     padding-right: 30px;
 }
 
-div.community-card > p {
+div.community-card p {
     flex: 9;
     border-left: solid 1px #FFF;
     font-family: 'Noto Sans JP', sans-serif;
 }
 
-.community-links > * p {
+.community-links p {
     padding: 30px;
 }
 
@@ -705,28 +693,27 @@ div.community-button {
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
-div.community-button > * {
+div.community-button a {
     flex: 1;
     text-align: center;
     font-family: 'Varela Round', sans-serif;
     padding: 15px;
-    margin: 0px 15px;
     max-width: 200px;
     border-radius: 100px;
 }
 
-div.twitter-button > * {
+div.twitter-button a {
     background-color: #00B9FF;
 }
 
-div.chat-button > * {
+div.chat-button a {
     background-color: #008E58;
 }
 
-.community-card > i.fa-twitter {
+.community-card i.fa-twitter {
     color: #00B9FF;
 }
 
@@ -744,10 +731,6 @@ body.landing #contribute {
     background-color: #848484;
 }
 
-.contribute-card > * {
-    color: #FFF;
-}
-
 /* Documentation */
 
 body.landing #documentation {
@@ -756,10 +739,6 @@ body.landing #documentation {
 
 .documentation-card {
     background-color: #556E8A;
-}
-
-.documentation-card > * {
-    color: #FFF;
 }
 
 /* Centered cards */
@@ -774,17 +753,21 @@ body.landing #documentation {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+.center-card {
+    color: #FFF;
+}
+
 .center-card > * {
     margin-top: 40px;
 }
 
-.center-card > p {
+.center-card p {
     width: 90%;
     max-width: 62em;
     text-align: center;
 }
 
-.center-card > a, .center-card > * > i {
+.center-card .more {
     color: #79D5FF;
 }
 
@@ -807,7 +790,7 @@ body.landing #documentation {
     max-width: 62em;
 }
 
-.post-wrapper > * li {
+.post-wrapper li {
     list-style: circle;
     font-weight: 300;
     margin-left: 2em;
@@ -875,7 +858,7 @@ footer {
     justify-content: flex-start;
 }
 
-.footer-logo > a > img.logo {
+.footer-logo img.logo {
     height: 75px;
     margin-bottom: 10px;
 }
@@ -890,7 +873,7 @@ footer {
     justify-content: flex-end;
 }
 
-ul.footer-services > li > a > i {
+ul.footer-services i {
     color: #676767;
     font-size: 150%;
     margin-left: 15px;
@@ -901,7 +884,7 @@ ul.footer-services > li > a > i {
     margin-top: auto;
 }
 
-.footer-menu-container > li {
+.footer-menu-container li {
     font-family: 'Noto Sans', sans-serif;
     font-size: 80%;
     margin-left: 20px;
@@ -930,12 +913,16 @@ ul.footer-services > li > a > i {
         padding-bottom: 40px;
     }
     
+    div.community-button {
+        justify-content: center;
+    }
+    
     div.community-more {
         display: flex;
     }
 }
 @media screen and (max-width: 750px) {
-    .header-logo > a > img.logo {
+    .header-logo img.logo {
         height: 90px;
     }
     
@@ -943,7 +930,7 @@ ul.footer-services > li > a > i {
         flex-wrap: wrap;
     }
     
-	.menu-container > li {
+	.menu-container li {
         margin: 0px 15px;
         line-height: 2em;
     }
@@ -960,7 +947,7 @@ ul.footer-services > li > a > i {
         padding-bottom: 40px;
     }
 
-    .center-card > p {
+    .center-card p {
         width: 85%;
     }
 
@@ -986,7 +973,7 @@ ul.footer-services > li > a > i {
         border-left: none;
     }
     
-    .community-links > * p {
+    .community-links p {
         padding: 30px 0px 30px 30px;
     }
     
@@ -994,7 +981,7 @@ ul.footer-services > li > a > i {
         flex-direction: column;
     }
     
-    div.community-button > * {
+    div.community-button a {
         width: 60%;
         min-width: 200px;
     }
@@ -1008,11 +995,11 @@ ul.footer-services > li > a > i {
         justify-content: center;
     }
     
-    ul.footer-services > li > a > i {
+    ul.footer-services i {
         margin: 0px 10px;
     }
     
-    .footer-links > ul {
+    .footer-links ul {
         justify-content: center;
         margin-bottom: 20px;
     }
