Update Linux trademark and footer text
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
     <div>
         <div>
             <h1>Linux on Apple Silicon</h1>
-            <p>Asahi Linux aims to bring you a polished Linux experience on Apple Silicon Macs.</p>
+            <p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p>
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
         </div>
         <div>
