--- a/static/css/main.css
+++ b/static/css/main.css
@@ -811,10 +811,11 @@ body.landing #documentation {
 .post p, .code-box, .post li, blockquote {
     margin-bottom: 15px;
     margin-top: 15px;
+    letter-spacing: 0.02em
 }
 
 .post a {
-    color: #0366d6;
+    color: #E20052;
 }
 
 code {
