Add blog templates
Signed-off-by: soundflora* <glitter@soundflora.tokyo>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,6 +34,7 @@
                 <li><a href="/contribute">Contribute</a></li>
                 <li><a href="https://github.com/AsahiLinux">GitHub</a></li>
                 <li><a href="https://github.com/AsahiLinux/docs/wiki">Wiki</a></li>
+                <li><a href="/blog">Blog</a></li>
                 <li><a href="/support">Donate</a></li>
             </ul>
         </div>
