--- a/static/css/main.css
+++ b/static/css/main.css
@@ -508,8 +508,7 @@ p, i {
 }
 
 b, strong {
-    font-family: 'Noto Sans JP', sans-serif;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .white-text {
@@ -573,6 +572,7 @@ div.header-menu {
 
 .menu-container li {
     font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
     margin: 0px 20px;
 }
 
@@ -700,6 +700,7 @@ div.community-button a {
     flex: 1;
     text-align: center;
     font-family: 'Varela Round', sans-serif;
+    font-weight: normal;
     padding: 15px;
     max-width: 200px;
     border-radius: 100px;
@@ -792,7 +793,7 @@ body.landing #documentation {
 }
 
 .post-wrapper li {
-    list-style: circle;
+    list-style: disc;
     font-weight: 300;
     margin-left: 2em;
     line-height: 1.4em;
@@ -809,10 +810,15 @@ body.landing #documentation {
     margin-top: 30px;
 }
 
-.post p, .code-box, .post li, blockquote {
+.post p, .code-box, .post ul, blockquote {
     margin-bottom: 15px;
     margin-top: 15px;
     letter-spacing: 0.02em
+}
+
+.post li {
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .post a {
@@ -820,10 +826,11 @@ body.landing #documentation {
 }
 
 code {
-    color: white;
-    padding: .2em .4em;
+    color: #0D4F1A;
+    padding: 0 .4em;
+    font-weight: normal;
     font-size: 85%;
-    background: #25292f;
+    background-color: rgba(6, 102, 238, 0.05);
     border-radius: 6px;
 }
 
@@ -832,14 +839,23 @@ pre {
     padding: 1em;
     border-radius: 6px;
     background: #25292f;
+    background-color: rgba(6, 102, 238, 0.05);
     color: #fff;
     overflow-x: auto;
+}
+
+pre code {
+    background: none;
 }
 
 blockquote {
     border: solid 1px;
     background-color: #e2e2e2;
     padding: 15px;
+}
+
+p img {
+    max-width: 100%;
 }
 
 /* Blog */
@@ -873,11 +889,11 @@ blockquote {
     margin-left: 10px;
 }
 
-h1:nth-child(1).entry-title {
+.blog-header h1.entry-title {
     border: none;
     margin: 25px 0px;
     padding: 0px;
-    font-size: 250%;
+    font-size: 200%;
 }
 
 div#breadcrumbs, div.post-bottom {
@@ -962,14 +978,6 @@ ul.footer-services i {
     font-family: 'Noto Sans', sans-serif;
     font-size: 80%;
     margin-left: 20px;
-}
-
-.footer-bottom {
-    text-align: center;
-    font-family: "Source Han Mono";
-    font-size: 80%;
-    background-color: #EFEFEF;
-    padding: 10px 0px;
 }
 
 .license, .disclaimer {
