--- a/static/css/main.css
+++ b/static/css/main.css
@@ -823,6 +823,7 @@ body.landing #documentation {
 
 .post a {
     color: #E20052;
+    text-decoration: underline;
 }
 
 code {
@@ -899,6 +900,10 @@ p img {
 div#breadcrumbs, div.post-bottom {
     padding: 10px;
     background-color: #dedede;
+}
+
+div#breadcrumbs a {
+    text-decoration: none;
 }
 
 div.post-bottom {
