blog: Add RSS links
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,6 +22,11 @@
                     </ul>
                 </div>
             </div>
+            {{ if .RSSLink }}
+            <p>
+                <a href="{{ .RSSLink }}">RSS feed</a>
+            </p>
+            {{ end }}
         </div>
     </div>
 </div>
