community.md: Move from Freenode to OFTC
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,7 +28,7 @@
         <div class="community-chat">
             <div class="community-card">
                 <i class="big-icon fas fa-hashtag"></i>
-                <p>Our primary communications platform is IRC on Freenode.</p>
+                <p>Our primary communications platform is IRC on OFTC.</p>
             </div>
             <div class="community-button chat-button">
                 <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Channel list</a>
