Remove deprecated RSSLink usage
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,9 +22,9 @@
                     </ul>
                 </div>
             </div>
-            {{ if .RSSLink }}
+            {{ if .OutputFormats.Get "RSS" }}
             <p>
-                <a href="{{ .RSSLink }}">RSS feed</a>
+                <a href="{{ (.OutputFormats.Get "RSS").RelPermalink }}">RSS feed</a>
             </p>
             {{ end }}
         </div>
