deploy: 5ae8df328128b0eb9c5aa50fc067c1008ec14bec

--- a/css/main.css
+++ b/css/main.css
@@ -799,7 +799,7 @@ body.landing #documentation {
     line-height: 1.4em;
 }
 
-.post h1:nth-child(1), .post h2:nth-child(1), .post h3:nth-child(1)  {
+.post h1:nth-child(1), .post h2:nth-child(1), .post h3:nth-child(1), blockquote p:nth-child(1)  {
     margin-top: 0px;
 }
 
@@ -855,8 +855,20 @@ blockquote {
     padding: 15px;
 }
 
-p img {
+p img, figure img {
     max-width: 100%;
+}
+
+.twitter-tweet {
+    margin: 0 auto;
+}
+
+.post figure figcaption p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 80%;
 }
 
 /* Blog */
