index.html: Add links release announcement post
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,16 @@
         </div>
     </div>
 </section>
+<section id="download">
+    <div class="center-title">
+        <h1>Download</h1>
+    </div>
+    <div class="download-card center-card">
+        <i class="big-icon fas fa-arrow-down"></i>
+        <p>The Asahi Linux alpha release is out!</p>
+        <a href="/2022/03/asahi-linux-alpha-release/" class="more">Check out the announcement<i class="fas fa-angle-right more"></i></a>
+    </div>
+</section>
 <section id="community" class="white-text">
     <div class="center-title">
         <h1>Community</h1>
