feat: dark theme
Signed-off-by: Raymond Kneipp <raymond.f.kneipp@gmail.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,7 +29,13 @@
 <body{{ if .IsHome }} class="landing"{{ end }}>
     <header id="header">
         <div class="header-logo">
-            <a href="/"><img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo.svg" | md5) 0 8 }}" class="logo" alt=""></a>
+            <a href="/">
+
+            <picture>
+                <source srcset="/img/AsahiLinux_logo_darkbg.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo_darkbg.svg" | md5) 0 8 }}" media="(prefers-color-scheme: dark)">
+                <img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo.svg" | md5) 0 8 }}" class="logo" alt="Asahi Linux logo">
+              </picture>
+            </a>
         </div>
         <div class="header-menu">
             <ul class="menu-container flex-container">
