--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,17 +28,27 @@
     <div class="community-links">
         <div class="community-twitter">
             <div class="community-card">
-                <i class="big-icon fab fa-twitter"></i>
-                <p>Follow us on Twitter to get announcements and other information.</p>
+                <div class="community-icons">
+                    <i class="big-icon fab fa-twitter"></i>
+                    <i class="big-icon fab fa-mastodon"></i>
+                </div>
+                <div class="community-text">
+                    <p>Follow us on Mastodon or Twitter to get announcements and other information.</p>
+                </div>
             </div>
-            <div class="community-button twitter-button">
-                <a href="https://twitter.com/AsahiLinux" class="rounded-button"><i class="fab fa-twitter"></i> @AsahiLinux</a>
+            <div class="community-button twitter-buttons">
+                <a rel="me" href="https://social.treehouse.systems/@AsahiLinux" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
+                <a rel="me" href="https://twitter.com/AsahiLinux" class="twitter-button rounded-button"><i class="fab fa-twitter"></i> @AsahiLinux</a>
             </div>
         </div>
         <div class="community-chat">
             <div class="community-card">
-                <i class="big-icon fas fa-hashtag"></i>
-                <p>Our primary communications platform is IRC on OFTC.</p>
+                <div class="community-icons">
+                    <i class="big-icon fas fa-hashtag"></i>
+                </div>
+                <div class="community-text">
+                    <p>Our primary communications platform is IRC on OFTC.</p>
+                </div>
             </div>
             <div class="community-button chat-button">
                 <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Channel list</a>
