--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,23 +1,34 @@
     <footer id="footer">
         <div class="footer-menu">
-            <div class="footer-logo">
-                <a href="/">
-                    <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
-                </a>
+            <div class="footer-containers">
+                <div class="footer-container">
+                    <div class="footer-logo">
+                        <a href="/">
+                            <img src="https://asahilinux.org/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
+                        </a>
+                        <div>
+                            <p class="footer-header">Asahi Linux</p>
+                            <p style="font-size: small;">Bringing you Linux to Apple Silicon</p>
+                        </div>  
+                    </div>
+                </div>
+                <div class="footer-container">
+                    <p class="footer-header">Relative Links</p>
+                    <ul class="footer-menu-container">
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/code-of-conduct">Code of Conduct</a></li>
+                        <li><a href="/copyright">Copyright policy</a></li>
+                    </ul>
+                    <ul class="footer-services">
+                        <li><a href="https://twitter.com/AsahiLinux"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.patreon.com/marcan"><i class="fab fa-patreon"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-end">
                 <span class="license">Licensed under CC BY-SA 4.0</span>
                 <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
-            </div>
-            <div class="footer-links">
-                <ul class="footer-services">
-                    <li><a href="https://twitter.com/AsahiLinux"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.patreon.com/marcan"><i class="fab fa-patreon"></i></a></li>
-                </ul>
-                <ul class="footer-menu-container">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/code-of-conduct">Code of Conduct</a></li>
-                    <li><a href="/copyright">Copyright policy</a></li>
-                </ul>
             </div>
         </div>
     </footer>
