Move license and disclaimer to the first footer container
Signed-off-by: Andrew Hong <andrew.jwn.hong@gmail.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,10 @@
                             <p style="font-size: small;">Bringing you Linux to Apple Silicon</p>
                         </div>  
                     </div>
+                    <div>
+                        <span class="license">Licensed under CC BY-SA 4.0</span>
+                        <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
+                    </div>
                 </div>
                 <div class="footer-container">
                     <p class="footer-header">Relative Links</p>
@@ -25,10 +29,6 @@
                         <li><a href="https://www.patreon.com/marcan"><i class="fab fa-patreon"></i></a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="footer-end">
-                <span class="license">Licensed under CC BY-SA 4.0</span>
-                <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
             </div>
         </div>
     </footer>
