Change image source
Signed-off-by: Andrew Hong <andrew.jwn.hong@gmail.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
                 <div class="footer-container">
                     <div class="footer-logo">
                         <a href="/">
-                            <img src="https://asahilinux.org/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
+                            <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
                         </a>
                         <div>
                             <p class="footer-header">Asahi Linux</p>
