footer: add mastodon link
Signed-off-by: Mark Esler <mark.esler@canonical.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,6 +9,7 @@
             </div>
             <div class="footer-links">
                 <ul class="footer-services">
+                    <li><a href="https://social.treehouse.systems/@AsahiLinux"><i class="fab fa-mastodon"></i></a></li>
                     <li><a href="https://twitter.com/AsahiLinux"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
                     <li><a href="https://www.patreon.com/marcan"><i class="fab fa-patreon"></i></a></li>
