index: Remove Twitter
Signed-off-by: Hector Martin <marcan@marcan.st>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,16 +29,14 @@
         <div class="community-twitter">
             <div class="community-card">
                 <div class="community-icons">
-                    <i class="big-icon fab fa-twitter"></i>
                     <i class="big-icon fab fa-mastodon"></i>
                 </div>
                 <div class="community-text">
-                    <p>Follow us on Mastodon or Twitter to get announcements and other information.</p>
+                    <p>Follow us on Mastodon to get announcements and other information.</p>
                 </div>
             </div>
             <div class="community-button twitter-buttons">
                 <a rel="me" href="https://social.treehouse.systems/@AsahiLinux" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
-                <a rel="me" href="https://twitter.com/AsahiLinux" class="twitter-button rounded-button"><i class="fab fa-twitter"></i> @AsahiLinux</a>
             </div>
         </div>
         <div class="community-chat">
